--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,23 @@
 <resources>
-    <string name="app_name">Data Siswa</string>
-    <string name="entry_siswa">Tambah Siswa</string>
-    <string name="deskripsi_no_item">Tidak ada data Siswa. Tap + untuk menambah data</string>
-    <string name="nama">Nama Siswa*</string>
-    <string name="alamat">Alamat Siswa*</string>
-    <string name="telpon">Telpon Siswa*</string>
-    <string name="nama1">Nama Siswa  :</string>
-    <string name="alamat1">Alamat Siswa :</string>
-    <string name="telpon1">Telpon Siswa :</string>
-    <string name="required_field">* required fields</string>
-    <string name="btn_submit">Submit</string>
-    <string name="detail_siswa">Detail Siswa</string>
-    <string name="edit_siswa">Edit Siswa</string>
-    <string name="back">Back</string>
+    <string name="app_name">Pustaka Buku</string>
+
+    <string name="entry_buku">Tambah Buku</string>
+    <string name="detail_buku">Detail Buku</string>
+    <string name="edit_buku">Edit Buku</string>
+
+    <string name="nama_buku">Judul Buku</string>
+    <string name="pengarang">Pengarang</string>
+    <string name="kategori_buku">Kategori Buku</string>
+    <string name="tanggal_masuk">Tanggal Masuk</string>
+    <string name="deskripsi_no_item">Tidak ada data Buku. Tap + untuk menambah data</string>
+    <string name="required_field">* Wajib diisi</string>
+
+    <string name="back">Kembali</string>
+    <string name="btn_submit">Simpan</string>
     <string name="yes">Ya</string>
     <string name="no">Tidak</string>
     <string name="delete">Hapus</string>
     <string name="update">Edit</string>
     <string name="attention">Perhatian</string>
-    <string name="tanya">Apakah anda yakin menghapus ini ?</string>
-    <string name="nama_buku">Nama Buku</string>
-    <string name="kategori_buku"> Kategori Buku</string>
-    <string name="pengarang">Pengarang</string>
-    <string name="entry_buku">Tambah Buku</string>
-    <string name="entry_kategori">Tambah Kategori</string>
-    <string name="detail_buku">Detail Buku</string>
-    <string name="edit_buku">Edit Buku</string>
+    <string name="tanya">Apakah anda yakin ingin menghapus data ini?</string>
 </resources>
