menambahkan fitur input kategori dan integrasi navigasi kategori pada halaman home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="update">Edit</string>
     <string name="attention">Perhatian</string>
     <string name="tanya">Apakah anda yakin ingin menghapus data ini?</string>
+
+    <string name="entry_kategori">Tambah Kategori</string>
+    <string name="nama_kategori">Nama Kategori</string>
+    <string name="success_add_kategori">Berhasil menambah kategori</string>
 </resources>
